# tasknote-py

./: .dockerignore  .gitignore  Dockerfile  README.md  TaskNote.md  Taskfile.yml  pyproject.toml  pytest.ini
.cursor/rules/: guidelines.mdc
.github/workflows/: ci.yml
.junie/: guidelines.md
apicollections/tasknote/: bruno.json  health check.bru  welcome.bru
apicollections/tasknote/main/: folder.bru  health check.bru  hello User.bru  welcome.bru
apicollections/tasknote/notes/: create a note.bru  delete note.bru  folder.bru  get a note.bru  health check.bru  list notes.bru  welcome.bru
apicollections/tasknote/tasks/: create a task.bru  delete a task.bru  get a task.bru  list tasks.bru
config/: services.yaml
requests/: test_main.http  test_notes.http
src/: main.py
src/common/: config_loader.py  logger.py  settings.py  timeutils.py
src/notes/: .env.sample  alembic.ini  logger.py  main.py  settings.py
src/notes/api/: dependencies.py  router.py  schemas.py
src/notes/application/: service.py
src/notes/domain/: exceptions.py  model.py
src/notes/migrations/: env.py
src/notes/persistence/: db.py  entities.py  mappers.py  repository.py
src/tasknote/: .env.sample  alembic.ini  constants.py  logger.py  main.py  settings.py
src/tasknote/api/: dependencies.py  router.py  schemas.py
src/tasknote/application/: note_service.py  tasks_service.py
src/tasknote/domain/: exceptions.py  models.py
src/tasknote/migrations/: env.py
src/tasknote/migrations/versions/: 43ba8b27dd8d_create_notes_table.py  8e9080ecfca9_create_tasks_table.py
src/tasknote/persistence/: db.py  entities.py  note_repository.py  tasks_repository.py
src/tasknote/persistence/mappers/: notes.py  tasks.py
tests/: test_main.py  test_notes.py
tests/common/: test_timeutils.py
tests/notes/: conftest.py
tests/notes/api/: test_notes.py  test_notes_api.py  test_notes_routes.py
tests/notes/application/: test_note_service.py  test_service.py
tests/notes/persistence/: test_repository.py
tests/tasknote/: conftest.py
tests/tasknote/api/: test_api.py  test_notes_api.py  test_notes_routes.py  test_routes.py
tests/tasknote/application/: test_notes_service.py  test_tasks_service.py
tests/tasknote/persistence/: test_notes_repository.py  test_tasks_repository.py
