# ----------------------------------------
# Project Metadata
# ----------------------------------------
[project]
name = "tasknote-py"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic-settings",
    "structlog",
    "alembic",
    "asyncpg",
    "psycopg2-binary",
    "python-dotenv",
    "greenlet",
    "uvicorn", # ASGI server
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio", # async test support
    "ruff", # lint + format
    "httpx", # async HTTP client
    "fastapi[standard]", # FastAPI with standard dependencies
    "pytest-cov", # coverage reporting
    "testcontainers", # Docker-based testing
]

# ----------------------------------------
# Ruff Configuration (Linting & Formatting)
# ----------------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"
fix = true  # Auto-fix issues

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # Pycodestyle errors
    "F", # Pyflakes (detects unused imports, undefined variables)
    "I", # isort (order imports)
    "B", # Bugbear (security/performance issues)
    "UP", # pyupgrade (suggests modern Python syntax)
    "PL", # pylint rules
    "T20", # print statements detection
    "RUF" # Ruff-specific rules
]
ignore = []  # Ignore missing docstrings

[tool.ruff.lint.isort]
force-single-line = false
lines-between-types = 1
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]
